# dioxus-hotdog-pg

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  config.toml  package-lock.json
assets/: tailwind.css
src/: backend.rs  main.rs
src/components/: favorites.rs  nav.rs  view.rs
